# bilinker

./: .bilinker.toml  .gitignore  Cargo.toml  README.md
.bilink/: .gitignore  00ff94ed-d072-4615-8f4b-e8659f1233a8.bilink  0626602e-c059-4637-ba0a-d58da33a7db7.bilink  06b7daf3-e087-4967-ad6f-903ca6c474c6.bilink  09b88fe0-9c26-463c-96f0-ebdcae30b50e.bilink  0d2fb700-1340-420c-a4df-8dcf2b66b7a1.bilink  0f02bb80-6847-4593-b3f0-6c26ddbd15b4.bilink  128c1c88-7e1c-46a8-8647-337d2d03d77a.bilink  12df224a-ac0a-4692-b5d1-a5fa18e1aedc.bilink  1379f134-cb74-41de-b997-37e2e0755a51.bilink  160adb11-a3e2-4d45-9c98-43743d012c8e.bilink  190ef678-b1a5-4764-9e02-c89e9cc4f511.bilink  1a530433-70a3-429a-9dd8-f34ca64158fe.bilink  1cb1d691-6778-4906-867f-7e2c72642983.bilink  1e318d3a-608c-4b47-9173-6c9f8bfebe6f.bilink  22157e3c-c7fc-4b22-994d-21081e36af40.bilink  2527ff84-6efe-4b9b-aa95-bf5e3cbf3d5b.bilink  26aaf542-77ec-4213-80d7-a046df608c83.bilink  298e1b92-fdd7-40d4-9730-37a261a4370c.bilink  2b0c636e-b43a-4ec4-bf00-9a7208020634.bilink  2c3c41af-742a-4466-bf33-6a543538bae9.bilink  2e630237-3a5d-4180-8ea3-ebde8fb75a95.bilink  315b1784-5b4c-432f-8de0-479afbaca963.bilink  321ee06d-1464-4fad-9f0a-ed132e6fb865.bilink  3321a1d8-d52d-4326-af2a-2d6971f8b86f.bilink  3633fe01-1f3a-41c7-84a5-4c2ec98218b6.bilink  389b5a13-e9f1-4c07-bf88-e964f3d0bc33.bilink  3a60b116-419d-4d54-9e76-12065afb4e91.bilink  3ac0bfd6-6dc5-415d-a03b-9a30ef6fda08.bilink  3e681ad1-f414-4864-9993-49060735ef9c.bilink  415bed5d-d42e-47f5-afac-24648bf157ec.bilink  430a5d51-e1b0-4b43-afb0-bfd3d9de0ff3.bilink  49218eae-67c9-4b2f-a615-41f1240c9df3.bilink  49432a0c-d9da-43d5-a8a6-afaa90a48ae4.bilink  4e6387d0-5112-4145-82d8-68b2dde0d312.bilink  5518360b-216d-46bc-b20c-0c51e2ae8030.bilink  57b96a09-9419-4b32-8e70-71b20de1dc7e.bilink  5ded6e01-d19b-4a9e-be61-912de64fa905.bilink  620fb3fd-4f22-4053-9839-51706275f375.bilink  6273424e-8e5c-4758-8767-d1d28a803e68.bilink  (+78 more)
.bilink/index/: index.scip
.bilink/persona/: voting-impl.bilink
.bilink/sciplink/: rust-analyzercargobilinker-cli0.1.0bilinker.sciplink  rust-analyzercargobilinker-cli0.1.0chain_status_shows_nodes.sciplink  rust-analyzercargobilinker-cli0.1.0html_graph.impl..[HtmlGraph]add_node.sciplink  rust-analyzercargobilinker-cli0.1.0html_graph.impl..[HtmlGraph]new.sciplink  rust-analyzercargobilinker-cli0.1.0project_root.sciplink  (+77 more)
crates/bilinker/: Cargo.toml
crates/bilinker-cli/: Cargo.toml
crates/bilinker-cli/src/: html_graph.rs  main.rs
crates/bilinker-cli/tests/: integration.rs
crates/bilinker-daemon/: Cargo.toml
crates/bilinker-daemon/src/: ipc.rs  language.rs  lsp_client.rs  lsp_manager.rs  main.rs  types.rs
crates/bilinker/src/: accept.rs  bilink.rs  capture.rs  chain.rs  check.rs  config.rs  get.rs  git.rs  grammar.rs  hash.rs  index.rs  lib.rs  link.rs  query.rs  scip_index.rs  sciplink.rs  task.rs
(+12 files in other folders)
