[package]
name = "bilinker-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bilinker"
path = "src/main.rs"

[dependencies]
bilinker = { path = "../bilinker" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
notify = "6"

[dev-dependencies]
bilinker = { path = "../bilinker" }
tempfile = "3"
