[package]
name = "bilinker-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bilinker"
path = "src/main.rs"

[dependencies]
bilinker = { path = "../bilinker" }
stratum = { git = "https://github.com/anibalanto/stratum.git", branch = "main" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "6"

[dev-dependencies]
bilinker = { path = "../bilinker" }
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
