[package]
name = "bilinker-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bilinker-daemon"
path = "src/main.rs"

[dependencies]
async-lsp   = "0.2"
tokio       = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["compat"] }
tower       = { version = "0.4", features = ["util"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
