[package]
name = "bilinker"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22"
tree-sitter-java = "0.21"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
estrato = { path = "../../../../../../../estrato/.estrato/tech-decisions/.estrato/impl/crates/estrato" }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
