[package]
name = "bilinker"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22"
tree-sitter-java = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-yaml = "0.6"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
stratum = { git = "https://github.com/anibalanto/stratum.git", branch = "main" }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
